Added MouseClick event

--- a/example/index.html
+++ b/example/index.html
@@ -31,8 +31,9 @@
         <div id="area1" class="drop-area"></div>
         <div id="area2" class="drop-area"></div>
 
-        <div id="item1" class="element">drag me every where</div>
+        <div id="item1" class="element">drag me every where with fingers</div>
         <div id="item2" class="element">rotate me or drag only in the area only with fingers</div>
         <div id="item3" class="element">drag me between areas</div>
+        <div id="item4" class="element">drag me every where with mouse</div>
     </body>
 </html>
